--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8-react-ghpg",
-  "private": false,
+  "private": true,
   "version": "0.0.0",
   "homepage": "https://n8ori0us.github.io/n8-react-ghpg/",
   "type": "module",
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -20,11 +21,14 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "gh-pages": "^5.0.0",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
   }
 }
